# chip8

./: CMakeLists.txt  README.md  linux-build.sh  windows-build.bat
headers/: init.h  machine.h  opcodes.h  stack.h  types.h
src/: init.c  machine.c  main.c  opcodes.c  stack.c
